fix: Add meta tag for responsive design on mobile devices

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,5 +1,5 @@
 #content-container {
-    margin-top: 50px;
+    margin: 5px 5px 50px 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
