--- a/src/styles/social-media.css
+++ b/src/styles/social-media.css
@@ -24,7 +24,6 @@
     text-decoration: none;
     text-align: center;
     color: #E8DCA2;
-    font-size: 32px;
     display: table-cell;
     vertical-align: middle;
     /*border: 1px solid hotpink ;*/
