--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -40,7 +40,7 @@ h3 {
     font-family: Roboto-Regular;
 }
 
-p, a, button {
+p, a, button, span {
     font-family: Roboto-Regular;
     font-size: 1.5rem;
 
@@ -72,7 +72,7 @@ em {
 
     }
 
-    p, a, button {
+    p, a, button, span {
         font-size: 1rem;
         margin: 0.625rem 0 0.625rem 0;
     }
